content/docs/v0.9.0-rc.1/addons/postgres/README.md
---
title: PostgreSQL Addon Overview | Stash
description: PostgreSQL Addon Overview | Stash
menu:
  docs_v0.9.0-rc.1:
    identifier: stash-postgres-readme
    name: Readme
    parent: stash-postgres
    weight: -1
product_name: stash
menu_name: docs_v0.9.0-rc.1
section_menu_id: stash-addons
url: /docs/v0.9.0-rc.1/addons/postgres/
aliases:
- /docs/v0.9.0-rc.1/addons/postgres/README/
info:
  catalog: v0.1.0
  cli: v0.1.0
  version: v0.9.0-rc.1
---

# Stash PostgreSQL Addon

Stash 0.9.0+ supports extending its functionality through addons. Stash PostgreSQL addon enables Stash to backup and restore PostgreSQL databases.

This guide will give you an overview of which PostgreSQL versions are supported and how the docs are organized.

## Supported PostgreSQL Versions

Stash supports backup and restore of the following PostgreSQL versions:

- [9.6](/docs/v0.9.0-rc.1/addons/postgres/guides/9.6/standalone)
- [10.2](/docs/v0.9.0-rc.1/addons/postgres/guides/10.2/standalone)
- [10.6](/docs/v0.9.0-rc.1/addons/postgres/guides/10.6/standalone)
- [11.1](/docs/v0.9.0-rc.1/addons/postgres/guides/11.1/standalone)
- [11.2](/docs/v0.9.0-rc.1/addons/postgres/guides/11.2/standalone)

## Documentation Overview

Stash PostgreSQL documentations are organized as below:

- [How does it works?](/docs/v0.9.0-rc.1/addons/postgres/overview) gives an overview of how backup and restore process for PostgreSQL database works in Stash.
- [Setup](/docs/v0.9.0-rc.1/addons/postgres/setup/install) shows how to install and uninstall PostgreSQL addon for Stash.
- [Guides](/docs/v0.9.0-rc.1/addons/postgres/guides/11.2/standalone) contains step by step guides to backup and restore different versions of PostgreSQL databases.
